feat(cards): renamed some classes

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -21,14 +21,14 @@ a {
   padding: 1rem;
 }
 
-.card__list {
+.cards__list {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   list-style: none;
 }
 
-.card__list-item {
+.cards__list-item {
 }
 
 .card {
@@ -50,11 +50,11 @@ a {
   }
 }
 
-.header {
+.card__header {
   grid-area: header;
 }
 
-.images {
+.card__images {
 }
 
 .images__list {
@@ -92,10 +92,10 @@ a {
   scroll-snap-align: start;
 }
 
-.main {
+.card__main {
   grid-area: main;
 }
 
-.footer {
+.card__footer {
   grid-area: footer;
 }
